change preset name

--- a/ticket-to-rio/export_presets.cfg
+++ b/ticket-to-rio/export_presets.cfg
@@ -1,6 +1,6 @@
-[preset.2]
+[preset.1]
 
-name="Linux"
+name="Linux/X11"
 platform="Linux"
 runnable=true
 advanced_options=false
@@ -16,7 +16,7 @@ encrypt_pck=false
 encrypt_directory=false
 script_export_mode=2
 
-[preset.2.options]
+[preset.1.options]
 
 custom_template/debug=""
 custom_template/release=""
