--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -60,7 +60,7 @@ jobs:
           path: build/windows/${{ env.EXPORT_NAME }}.exe # Path to the file to upload
 
       - name: Create GitHub Release and Upload Asset
-        if: github.event_name == 'push' && github.ref == 'refs/heads/Dev_base' # Only run on push to the main branch
+        if: github.event_name == 'push' && github.ref == 'refs/heads/49-add-artifact-in-release' # Only run on push to the main branch
         uses: softprops/action-gh-release@v2
         with:
           files: build/windows/${{ env.EXPORT_NAME }}.exe # File(s) to attach to the release
