--- a/ticket-to-rio/export_presets.cfg
+++ b/ticket-to-rio/export_presets.cfg
@@ -1,6 +1,6 @@
-[preset.0]
+[preset.1]
 
-name="Linux"
+name="Linux/X11"
 platform="Linux"
 runnable=true
 advanced_options=false
@@ -16,7 +16,7 @@ encrypt_pck=false
 encrypt_directory=false
 script_export_mode=2
 
-[preset.0.options]
+[preset.1.options]
 
 custom_template/debug=""
 custom_template/release=""
@@ -38,7 +38,7 @@ ssh_remote_deploy/cleanup_script="#!/usr/bin/env bash
 kill $(pgrep -x -f \"{temp_dir}/{exe_name} {cmd_args}\")
 rm -rf \"{temp_dir}\""
 
-[preset.1]
+[preset.0]
 
 name="Windows Desktop"
 platform="Windows Desktop"
@@ -56,7 +56,7 @@ encrypt_pck=false
 encrypt_directory=false
 script_export_mode=2
 
-[preset.1.options]
+[preset.0.options]
 
 custom_template/debug=""
 custom_template/release=""
