--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -17,7 +17,7 @@ jobs:
     name: Build Windows Executable
     runs-on: ubuntu-22.04
     container:
-      image: barichello/godot-ci:${{ env.GODOT_VERSION }}
+      image: barichello/godot-ci:${{ GODOT_VERSION }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -43,14 +43,14 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: windows-executable
-          path: build/windows/${{ env.EXPORT_NAME }}.exe
+          path: build/windows/${{ EXPORT_NAME }}.exe
           retention-days: 1
 
   build-linux:
     name: Build Linux Executable
     runs-on: ubuntu-22.04
     container:
-      image: barichello/godot-ci:${{ env.GODOT_VERSION }}
+      image: barichello/godot-ci:${{ GODOT_VERSION }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -76,7 +76,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: linux-executable
-          path: build/linux/${{ env.EXPORT_NAME }}.x86_64
+          path: build/linux/${{ EXPORT_NAME }}.x86_64
           retention-days: 1
 
   create-release:
@@ -103,15 +103,15 @@ jobs:
         run: |
           echo "Files in dist directory:"
           ls -R ./dist
-          echo "Expected Windows executable: ./dist/windows/${{ env.EXPORT_NAME }}.exe"
-          echo "Expected Linux executable: ./dist/linux/${{ env.EXPORT_NAME }}.x86_64"
+          echo "Expected Windows executable: ./dist/windows/${{ EXPORT_NAME }}.exe"
+          echo "Expected Linux executable: ./dist/linux/${{ EXPORT_NAME }}.x86_64"
 
       - name: Create GitHub Release and Upload Assets
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            ./dist/windows/${{ env.EXPORT_NAME }}.exe
-            ./dist/linux/${{ env.EXPORT_NAME }}.x86_64
+            ./dist/windows/${{ EXPORT_NAME }}.exe
+            ./dist/linux/${{ EXPORT_NAME }}.x86_64
           name: "Ticket to Rio - V${{ github.run_number }}" 
           
           tag_name: "Ticket-to-Rio-V${{ github.run_number }}"
