--- a/.github/workflows/godot-tests.yml
+++ b/.github/workflows/godot-tests.yml
@@ -10,3 +10,5 @@ jobs:
         with:
           godot-version: '4.3'
           paths: 'res://test'
+          publish-report: false
+          upload-report: false
