--- a/.github/workflows/godot-tests.yml
+++ b/.github/workflows/godot-tests.yml
@@ -37,7 +37,7 @@ jobs:
   
   test:
     runs-on: ubuntu-latest
-    needs: Linux Export
+    needs: export-linux
     steps:
       - uses: actions/checkout@v4
       - uses: MikeSchulze/gdunit4-action@v1
