--- a/.github/workflows/godot-tests.yml
+++ b/.github/workflows/godot-tests.yml
@@ -1,53 +1,20 @@
 name: GdUnit4 Tests
 on: [push, pull_request]
 
-# jobs:
-#   test:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v4
-#       - uses: MikeSchulze/gdunit4-action@v1
-#         with:
-#           godot-version: '4.3'
-#           paths: 'res://test'
-#           publish-report: false
-#           upload-report: false
-
-env:
-  GODOT_VERSION: 4.3
-  EXPORT_NAME: ticket-to-rio
-  PROJECT_PATH: ticket-to-rio
-
 jobs:
-  export-linux:
-    name: Linux Export
-    runs-on: ubuntu-22.04
-    container:
-      image: barichello/godot-ci:4.3
+  test:
+    name: Run Tests
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           lfs: true
-      - name: Setup
-        run: |
-          mkdir -v -p ~/.local/share/godot/export_templates/
-          mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
-      - name: Linux Build
-        run: |
-          mkdir -v -p build/linux
-          EXPORT_DIR="$(readlink -f build)"
-          cd $PROJECT_PATH
-          godot --headless --verbose --export-release "Linux/X11" "$EXPORT_DIR/linux/$EXPORT_NAME.x86_64"
-  
-  test:
-    runs-on: ubuntu-latest
-    needs: export-linux
-    steps:
-      - uses: actions/checkout@v4
-      - uses: MikeSchulze/gdunit4-action@v1
+          submodules: true
+      - uses: MikeSchulze/gdUnit4-action@v1
         with:
-          godot-version: '4.3'
-          paths: 'res://test'
+          godot-version: "4.3"
+          godot-status: "stable"
+          paths: "ticket-to-rio/test"
           publish-report: false
-          upload-report: false
+          report-name: test_report
