--- a/.github/workflows/godot-tests.yml
+++ b/.github/workflows/godot-tests.yml
@@ -1,20 +1,67 @@
-name: GdUnit4 Tests
-on: [push, pull_request]
+name: beehave-ci
+
+on:
+  push:
+    paths-ignore:
+      - "**.jpg"
+      - "**.png"
+      - "**.svg"
+      - "**.md"
+      - "**plugin.cfg"
+  pull_request:
+    paths-ignore:
+      - "**.jpg"
+      - "**.png"
+      - "**.svg"
+      - "**.md"
+      - "**plugin.cfg"
+  workflow_dispatch:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  test:
-    name: Run Tests
+  unit-tests:
     runs-on: ubuntu-latest
+    permissions:
+      actions: write
+      checks: write
+      contents: write
+      pull-requests: write
+      statuses: write
+
+    strategy:
+      fail-fast: false
+      max-parallel: 10
+      matrix:
+        godot-version: ["4.2.2", "4.3", "4.4"]
+
+    name: "🤖 CI on Godot ${{ matrix.godot-version }}"
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Run GDUnit4 tests
+        uses: MikeSchulze/gdUnit4-action@v1.1.1
         with:
-          lfs: true
-          submodules: true
-      - uses: MikeSchulze/gdUnit4-action@v1
-        with:
-          godot-version: "4.3"
+          godot-version: ${{ matrix.godot-version }}
           godot-status: "stable"
-          paths: "ticket-to-rio/test"
+          timeout: 3
+          paths: "res://test"
+          version: "installed"
           publish-report: false
-          report-name: test_report
+          report-name: report_Godot${{ matrix.godot-version }}_unit-tests
+
+  finalize:
+    if: ${{ !cancelled() }}
+    runs-on: ubuntu-latest
+    name: "Final Results"
+    needs: [unit-tests]
+    steps:
+      - run: exit 1
+        if: >-
+          ${{
+                 contains(needs.*.result, 'failure')
+              || contains(needs.*.result, 'cancelled')
+          }}
