--- a/.github/workflows/godot-tests.yml
+++ b/.github/workflows/godot-tests.yml
@@ -2,7 +2,7 @@ name: ci-pr-example
 run-name: ${{ github.head_ref || github.ref_name }}-ci-pr-example
 
 on:
-    pull_request:
+    push:
         paths-ignore:
             - "**.yml"
             - "**.md"
