--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -44,7 +44,7 @@ jobs:
           mkdir -v -p "$GITHUB_WORKSPACE/build/windows"
           
           
-          EXPORT_DIR_ABS="$GITHUB_WORKSPACE/build"
+          EXPORT_DIR_ABS="$(readlink -f build)"
           
           echo "Changing directory to project path: $PROJECT_PATH"
           cd "$PROJECT_PATH"
@@ -76,7 +76,7 @@ jobs:
         with:
           name: windows-executable
           
-          path: build/windows/${ EXPORT_NAME }.exe 
+          path: build/windows/${{ EXPORT_NAME }}.exe 
           if-no-files-found: error 
           retention-days: 1
 
@@ -108,7 +108,7 @@ jobs:
           echo "Creating build directory for Linux..."
           mkdir -v -p "$GITHUB_WORKSPACE/build/linux"
 
-          EXPORT_DIR_ABS="$GITHUB_WORKSPACE/build"
+          EXPORT_DIR="$(readlink -f build)"
           
           echo "Changing directory to project path: $PROJECT_PATH"
           cd "$PROJECT_PATH"
@@ -137,7 +137,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: linux-executable
-          path: build/linux/${ EXPORT_NAME }.x86_64
+          path: build/linux/${{ EXPORT_NAME }}.x86_64
           if-no-files-found: error 
           retention-days: 1
 
@@ -177,10 +177,10 @@ jobs:
         with:
           
           files: |
-            ./dist/windows/${ EXPORT_NAME }.exe
-            ./dist/linux/${ EXPORT_NAME }.x86_64
-          name: "Ticket to Rio - V${ github.run_number }" 
-          tag_name: "Ticket-to-Rio-V${ github.run_number }" 
+            ./dist/windows/${{ EXPORT_NAME }}.exe
+            ./dist/linux/${{ EXPORT_NAME }}.x86_64
+          name: "Ticket to Rio - V${{ github.run_number }}" 
+          tag_name: "Ticket-to-Rio-V${{ github.run_number }}" 
           body: |
             Automated build from branch ${ github.ref_name }. Includes Windows and Linux builds.
             Commit: ${ github.sha }
