--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -76,7 +76,7 @@ jobs:
         with:
           name: windows-executable
           
-          path: build/windows/${{ EXPORT_NAME }}.exe 
+          path: build/windows/${ EXPORT_NAME }.exe 
           if-no-files-found: error 
           retention-days: 1
 
@@ -137,7 +137,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: linux-executable
-          path: build/linux/${{ EXPORT_NAME }}.x86_64
+          path: build/linux/${ EXPORT_NAME }.x86_64
           if-no-files-found: error 
           retention-days: 1
 
@@ -177,10 +177,10 @@ jobs:
         with:
           
           files: |
-            ./dist/windows/${{ EXPORT_NAME }}.exe
-            ./dist/linux/${{ EXPORT_NAME }}.x86_64
-          name: "Ticket to Rio - V${{ github.run_number }}" 
-          tag_name: "Ticket-to-Rio-V${{ github.run_number }}" 
+            ./dist/windows/${ EXPORT_NAME }.exe
+            ./dist/linux/${ EXPORT_NAME }.x86_64
+          name: "Ticket to Rio - V${ github.run_number }" 
+          tag_name: "Ticket-to-Rio-V${ github.run_number }" 
           body: |
             Automated build from branch ${ github.ref_name }. Includes Windows and Linux builds.
             Commit: ${ github.sha }
